@@ -566,7 +566,8 @@ int libbde_external_key_read(
 			 function );
 			libnotify_print_data(
 			 value_data,
-			 value_data_size );
+			 value_data_size,
+			 0 );
 		}
 	}
 #endif
